# Ximea_Cam_with_Web_Socket_Server_Rust

./: Cargo.toml
src/: main.rs
