[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
futures = "0.3.30"
futures-util = "0.3.30"
futures-channel = "0.3.30"
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"

xiapi = { path = "xiapi-master" }
image = "0.23" 
turbojpeg = "1.1.0"
base64 = "0.22.1"



[build-dependencies]
cmake = "0.1"